<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#F3F3F3"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:layout_weight="5">

            <TextView
                android:id="@+id/calculatorScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:gravity="center|right"
                android:textColor="#000000"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/CustomButton"
            android:layout_weight="1">

            <Button
                android:id="@+id/calProc"
                android:layout_height="match_parent"
                android:text="%"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/calCE"
                android:layout_height="match_parent"
                android:text="CE"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>

            <Button
                android:id="@+id/calC"
                android:layout_height="match_parent"
                android:text="C"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/calDelete"
                android:layout_height="match_parent"
                android:text="->"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/cal1DivideBy"
                android:layout_height="match_parent"
                android:text="1/X"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/calRoot"
                android:layout_height="match_parent"
                android:text="root"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/calDivide"
                android:layout_height="match_parent"
                android:text="/"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/cal7"
                android:layout_height="match_parent"
                android:text="7"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/cal8"
                android:layout_height="match_parent"
                android:text="8"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/cal9"
                android:layout_height="match_parent"
                android:text="9"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/calMultiply"
                android:layout_height="match_parent"
                android:text="X"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/cal4"
                android:layout_height="match_parent"
                android:text="4"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/cal5"
                android:layout_height="match_parent"
                android:text="5"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/cal6"
                android:layout_height="match_parent"
                android:text="6"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/calMinus"
                android:layout_height="match_parent"
                android:text="-"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/cal1"
                android:layout_height="match_parent"
                android:text="1"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/cal2"
                android:layout_height="match_parent"
                android:text="2"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/cal3"
                android:layout_height="match_parent"
                android:text="3"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/calPlus"
                android:layout_height="match_parent"
                android:text="+"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/calChangeSign"
                android:layout_height="match_parent"
                android:text="+/-"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/cal0"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/calComma"
                android:layout_height="match_parent"
                android:text=","
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="@drawable/button_background"
                style="@style/CustomButton"/>
            <Button
                android:id="@+id/calEqual"
                android:layout_height="match_parent"
                android:text="="
                android:textSize="22sp"
                app:backgroundTint="@null"
                android:background="#005a9e"
                android:textColor="#FFFFFF"
                style="@style/CustomButton"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>